Fix description spacing

--- a/src/renderer/components/JobOverviewDisplay/styles.pcss
+++ b/src/renderer/components/JobOverviewDisplay/styles.pcss
@@ -2,3 +2,7 @@
     display: flex;
     justify-content: space-between;
 }
+
+.description-container > * {
+    width: 100%;
+}
